Fixed bug #53848 (fgetcsv() ignores spaces at beginnings of fields).